modify third project info

--- a/index.html
+++ b/index.html
@@ -356,24 +356,19 @@ Specialize in Flutter and Kotlin, enjoy learning new technology to solve people'
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/sunshine-project.png"
-                alt="Weather Project"
+                src="./assets/travel-project.png"
+                alt="Travel Project"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Sunshine</h2>
+            <h2 class="experience-sub-title project-title">Shar Bhon Daw</h2>
             <div class="btn-container">
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="window.open('https://github.com/WinKoKo91/weather_clean_architecture_tdd')"
-              >
-                Github
-              </button>
+          
              
             </button>
             <button
               class="btn btn-color-2 project-btn"
-              onclick="window.open('https://play.google.com/store/apps/details?id=com.kwinlab.sunshine')"
+              onclick="window.open('https://play.google.com/store/apps/details?id=com.kwin.android.sharbondaw')"
             >
               Play Store
             </button>
