add responsive design

--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
       <div>
         <ul class="nav-links">
           <li>
-            <a href="#about"> About </a>
+            <a href="#about">About</a>
           </li>
           <li>
-            <a href="#experince"> Experince </a>
+            <a href="#experience">Experince</a>
           </li>
           <li>
-            <a href="#project"> Projects </a>
+            <a href="#projects">Projects</a>
           </li>
           <li>
-            <a href="#contact"> Contact </a>
+            <a href="#contact">Contact</a>
           </li>
         </ul>
       </div>
@@ -45,8 +45,8 @@
         </div>
         <div class="menu-links">
           <li><a href="#about" onclick="toggleMenu()">About</a></li>
-          <li><a href="#experince" onclick="toggleMenu()">Experince</a></li>
-          <li><a href="#project" onclick="toggleMenu()">Projects</a></li>
+          <li><a href="#experience" onclick="toggleMenu()">Experince</a></li>
+          <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
           <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
         </div>
       </div>
@@ -335,7 +335,7 @@ Specialize in Flutter and Kotlin, enjoy learning new technology to solve people'
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Sunshine</h2>
+            <h2 class="experience-sub-title project-title">Sun Shine</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
