--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="#about">About</a>
           </li>
           <li>
-            <a href="#experience">Experince</a>
+            <a href="#experience">Experience</a>
           </li>
           <li>
             <a href="#projects">Projects</a>
@@ -46,7 +46,7 @@
         </div>
         <div class="menu-links">
           <li><a href="#about" onclick="toggleMenu()">About</a></li>
-          <li><a href="#experience" onclick="toggleMenu()">Experince</a></li>
+          <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
           <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
           <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
         </div>
@@ -348,9 +348,9 @@ Specialize in Flutter and Kotlin, enjoy learning new technology to solve people'
        
             <button
               class="btn btn-color-2 project-btn"
-              onclick="window.open('https://play.google.com/store/apps/details?id=com.kwinlab.sunshine')"
+              onclick="window.open('https://sun-shine-402314.web.app/')"
             >
-              Play Store
+              Website
             </button>
             </div>
           </div>
