--- a/index.html
+++ b/index.html
@@ -322,9 +322,9 @@ Specialize in Flutter and Kotlin, enjoy learning new technology to solve people'
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('https://play.google.com/store/apps/details?id=com.kwin.ngwaylelnhuan')"
+                onclick="window.open('https://com-kwin-ngwaylelnhuan.en.uptodown.com/android')"
               >
-                Play Store
+                Android App
               </button>
             </div>
           </div>
